# sqlite3_ext

./: Argcfile.sh  CHANGELOG.md  Cargo.toml  README.md  build.rs  robo.yml
examples/: bigdecimal.rs  decimal.rs  generate_series.rs  rarray.rs  shared_context.rs  vtablog.rs
examples/vtablog/: main.rs  test.rs
sqlite3_ext/: Cargo.toml  build.rs  robo.yml
sqlite3_ext/examples/: generate_series.rs  vtablog.rs
sqlite3_ext/sqlite3_ext_macro/: Cargo.toml
sqlite3_ext/sqlite3_ext_macro/src/: lib.rs
sqlite3_ext/src/: extension.rs  function.rs  lib.rs  static_ext.rs  types.rs  value.rs  vtab.rs
sqlite3_ext/src/ffi/: dynamic_link.rs  mod.rs  static_link.rs
sqlite3_ext/src/vtab/: index_info.rs  mod.rs  stubs.rs
sqlite3_ext/tests/: bindings.rs  read_only.rs  update.rs
sqlite3_ext/tests/helpers/: mod.rs
sqlite3_ext_macro/: Cargo.toml
sqlite3_ext_macro/src/: ext_attr.rs  fn_attr.rs  lib.rs  vtab_attr.rs
src/: connection.rs  extension.rs  ffi.rs  function.rs  globals.rs  iterator.rs  lib.rs  mutex.rs  rusqlite.rs  sqlite3ext.rs  stack_ref.rs  static_ext.rs  test_helpers.rs  transaction.rs  types.rs  value.rs  vtab.rs  with_rusqlite.rs
src/bindings/: mod.rs  rusqlite_helper.rs  vtab.rs
src/bindings/ffi/: sqlite3ext.rs
src/ffi/: mod.rs  sqlite3funcs.rs  sqlite3types.rs
src/function/: context.rs  mod.rs  stubs.rs  test.rs
src/query/: mod.rs  params.rs  test.rs
src/value/: blob.rs  mod.rs  passed_ref.rs  test.rs  unprotected.rs  unsafe_ptr.rs  value_list.rs
src/vtab/: function.rs  index_info.rs  mod.rs  module.rs  stubs.rs
tests/: bindings.rs  example.rs  functions.rs  loadable_extension.rs  read_only.rs  update.rs  vtab.rs  with_rusqlite.rs
tests/helpers/: mod.rs
tests/ui/: column_borrow.rs  column_borrow.stderr  column_leak.rs  column_leak.stderr  scalar_function.rs  scalar_function.stderr  sqlite3_version_required_invalid_version.rs  sqlite3_version_required_invalid_version.stderr  sqlite3_version_required_no_fallback.rs  sqlite3_version_required_no_fallback.stderr  valueref.rs  valueref.stderr  vtab_missing_trait.rs  vtab_missing_trait.stderr
tests/vtab/: errors.rs  find_function.rs  index_info.rs  main.rs  module_types.rs  test_vtab.rs
