[package]
name = "sqlite3_ext"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "sqlite3_ext_macro" ]

[features]
static = [ "dep:libsqlite3-sys" ]
static_modern = [ "static", "libsqlite3-sys?/bundled_bindings" ]

[dependencies]
bigdecimal = { version = "0.3.0", optional = true }
fallible-iterator = "0.2.0"
libsqlite3-sys = { version = "0.24.2", optional = true }
paste = "1.0.7"
rusqlite = { version = "0.27.0", optional = true }
sealed = "0.4.0"
sqlite3_ext_macro = { path = "sqlite3_ext_macro" }

[dev-dependencies]
nom = "7.1.1"
pretty_assertions = "1.2.1"
indoc = "1.0"
regex = "1.5.6"
lazy_static = "1.4.0"
trybuild = "1.0.63"

[build-dependencies]
proc-macro2 = "1.0"
which = "4.2.5"
syn = { version = "1.0", features = [ "parsing", "full" ] }
quote = "1.0"

[[test]]
name = "vtab"
required-features = [ "static" ]

[[example]]
name = "generate_series"
crate-type = [ "staticlib", "cdylib" ]
test = true

[[example]]
name = "vtablog"
crate-type = [ "staticlib", "cdylib" ]
test = true

[[example]]
name = "decimal"
required-features = [ "bigdecimal" ]
crate-type = [ "staticlib", "cdylib" ]
test = true
