[package]
name = "sqlite3_ext_macro"
authors = ["The sqlite3_ext developers"]
version = "0.1.0"
edition = "2021"
license = "blessing"
description = "Derive macros for sqlite3_ext"
homepage = "https://github.com/CGamesPlay/sqlite3_ext"
repository = "https://github.com/CGamesPlay/sqlite3_ext"
keywords = [ "database", "sqlite", "ffi", "derive" ]
categories = [ "database" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.0"
syn = { version = "1.0", features = [ "parsing", "full" ] }

[dev-dependencies]
sqlite3_ext = { path = ".." }
